# pocket-narrator

./: .gitignore  Data1.csv  README.md  pyproject.toml  requirements.txt  test_text_quality.py
config/: prompts.txt
configs/: base_config.yaml  mamba_tinystories.yaml  ngram-1.yaml  ngram_a.yaml  ngram_b.yaml  ngram_bpe_GPT4_clean_quartered.yaml  ngram_bpe_GPT4_tinystories.yaml  ngram_c.yaml  ngram_char_30ktinystories.yaml  ngram_char_GPT4_clean_quartered.yaml  ngram_char_GPT4_tinystories.yaml  train_tokenizer_and_lm_dataset.yaml  transformer-1.yaml  transformer-2.yaml  transformer_bpe_30ktinystories.yaml  transformer_bpe_GPT4_clean_quartered.yaml  transformer_char_30ktinystories.yaml  transformer_d.yaml  transformer_d_medium.yaml  transformer_d_medium_quarted.yaml  transformer_d_small.yaml  transformer_e.yaml  transformer_e_medium.yaml  transformer_f.yaml  transformer_f_medium.yaml  transformer_g.yaml  transformer_g_medium.yaml  transformer_h.yaml  transformer_h_medium.yaml  transformer_h_medium_linear_attention.yaml  transformer_h_medium_swiglu.yaml  transformer_i.yaml  transformer_i_medium.yaml
data/: mvp_dataset.txt  prompts.txt  the Hugging Face Datasets Hub.py
gpt2/: bpe_tokenizer_utils.py  config_utils.py  data.txt  eval_test.json  evaluation.py  generate.py  gpt2.py  gpt2_model_compare.py  gpt2_trainer.py  gpt2main.py  prepare_eval_data.py
notebooks/: data_exploration.ipynb  data_exploration_GPT3.ipynb  data_exploration_GPT4.ipynb  data_exploration_GPT4_kosar.ipynb  data_exploration_kosar.ipynb
pocket_narrator/: build_dataloaders.py  data_loader.py  (+9 more)
(+153 files in other folders)
